--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -34,6 +34,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install build
+
+    - name: Set version
+      run: |
+        VERSION=$(echo $GITHUB_REF | sed 's/refs\/tags\///')
+        sed -i "s/version = \".*\"/version = \"$VERSION\"/" pyproject.toml
+
     - name: Build package
       run: python -m build
     - name: Publish package
