--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ SQLAlchemy = "^2.0.36"
 psycopg2 = "^2.9.10"
 pandas = "^2.2.3"
 pyodbc = "^5.2.0"
+pylint = "^3.3.1"
 
 [build-system]
 requires = ["poetry-core"]
