--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,25 +21,25 @@ permissions:
 
 jobs:
 
-  pylint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
+  # pylint:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: '3.x'
+  #     - name: Set up Python
+  #       uses: actions/setup-python@v3
+  #       with:
+  #         python-version: '3.x'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pylint
+  #     - name: Install dependencies
+  #       run: |
+  #         python -m pip install --upgrade pip
+  #         pip install pylint
 
-      - name: Run pylint
-        run: |
-          pylint connectionvault/ || true  
-        # true will just run and Ensure the job doesn't fail
+  #     - name: Run pylint
+  #       run: |
+  #         pylint app/ || true  
+  #       # true will just run and Ensure the job doesn't fail
 
 
 
