--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,7 @@ authors = ["ankit <ankit48365@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 
-[tool.poetry.package]
-include = ["src"]
-from = "app/"
+packages = [ { include = "src", from = "app/" }]
 
 [tool.poetry.dependencies]
 python = "^3.11"
