--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ psycopg2 = "^2.9.10"
 pandas = "^2.2.3"
 pyodbc = "^5.2.0"
 pylint = "^3.3.1"
+poetry = "^1.8.4"
 
 [build-system]
 requires = ["poetry-core"]
