--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "connectionvault"
-version = "0.0.91"
+version = "1.1.92"
 description = "help with connection details"
 authors = ["ankit <ankit48365@gmail.com>"]
 license = "MIT"
@@ -16,6 +16,7 @@ psycopg2 = "^2.9.10"
 pandas = "^2.2.3"
 pyodbc = "^5.2.0"
 pylint = "^3.3.1"
+mysql-connector-python = "^9.3.0"
 
 [build-system]
 requires = ["poetry-core"]
