--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "connectionvault"
-version = "2.0.0"
+version = "2.0.1"
 description = "help with connection details"
-authors = ["ankit <ankit48365@gmail.com>"]
+authors = ["ankit <ankit48365@gmail.com>","Akansha K <akanshakaushik0995@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 
