--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "connectionvault"
-version = "2.2.0"
+version = "2.2.1"
 description = "help with connection details"
 authors = ["ankit <ankit48365@gmail.com>","Akansha K <akanshakaushik0995@gmail.com>"]
 license = "MIT"
@@ -18,6 +18,7 @@ pyodbc = "^5.2.0"
 pylint = "^3.3.1"
 mysql-connector-python = "^9.3.0"
 poetry = "^1.8.4"
+tabulate = "^0.9.0"
 
 [build-system]
 requires = ["poetry-core"]
