--- a/.github/workflows/pylint-code-check.yml
+++ b/.github/workflows/pylint-code-check.yml
@@ -26,4 +26,35 @@ jobs:
 
       - name: Run pylint
         run: |
-          pylint app/ || true  # Ensure the job doesn't fail
+          pylint app/ > pylint_report.txt || true
+
+      - name: Pylint Score Badge Update
+        run: |
+          PYLINT_SCORE=$(grep -oP 'rated at \K[0-9]+\.[0-9]+' pylint_report.txt)
+          echo "Pylint Score: $PYLINT_SCORE"
+
+          # Determine badge color based on score
+          if (( $(echo "$PYLINT_SCORE >= 9.0" | bc -l) )); then
+            COLOR="green"
+          elif (( $(echo "$PYLINT_SCORE >= 7.0" | bc -l) )); then
+            COLOR="yellow"
+          else
+            COLOR="red"
+          fi
+
+          # Remove existing badges
+          sed -i '/!\[pylint\]/d' README.md
+
+          # Prepend updated badges to README
+          echo -e "![pylint](https://img.shields.io/badge/pylint-$PYLINT_SCORE-$COLOR)\n$(cat README.md)" > README.md.tmp
+          mv README.md.tmp README.md
+
+      - name: Commit and Push README update 
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add README.md pylint_report.txt
+          git commit -m "Update Pylint badge in README [skip ci]" || echo "No changes to commit"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GHA_TOKEN }}
