--- a/.github/workflows/pylint-code-check.yml
+++ b/.github/workflows/pylint-code-check.yml
@@ -21,8 +21,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install pylint
+          python -m pip install --upgrade pip > /dev/null
+          pip install pylint > /dev/null
 
       - name: Run pylint
         run: |
@@ -49,12 +49,21 @@ jobs:
           echo -e "![pylint](https://img.shields.io/badge/pylint-$PYLINT_SCORE-$COLOR)\n$(cat README.md)" > README.md.tmp
           mv README.md.tmp README.md
 
-      - name: Commit and Push README update 
+      # - name: Commit and Push README update 
+      #   run: |
+      #     git config --global user.name "github-actions[bot]"
+      #     git config --global user.email "github-actions[bot]@users.noreply.github.com"
+      #     git add README.md pylint_report.txt
+      #     git commit -m "Update Pylint badge in README [skip ci]" || echo "No changes to commit"
+      #     git push
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GHA_TOKEN }}
+
+      - name: Commit and Push README update
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add README.md pylint_report.txt
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@users.noreply.github.com"
+          git remote set-url origin https://x-access-token:${{ secrets.GHA_TOKEN }}@github.com/${{ github.repository }}
+          git add README.md sqlfluff_report.txt
           git commit -m "Update Pylint badge in README [skip ci]" || echo "No changes to commit"
-          git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GHA_TOKEN }}
+          git push origin HEAD:${{ github.ref_name }}
