--- a/.github/workflows/pylint-code-check.yml
+++ b/.github/workflows/pylint-code-check.yml
@@ -64,6 +64,6 @@ jobs:
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@users.noreply.github.com"
           git remote set-url origin https://x-access-token:${{ secrets.GHA_TOKEN }}@github.com/${{ github.repository }}
-          git add README.md sqlfluff_report.txt
+          git add README.md pylint_report.txt
           git commit -m "Update Pylint badge in README [skip ci]" || echo "No changes to commit"
           git push origin HEAD:${{ github.ref_name }}
