--- a/.github/workflows/pylint-code-check.yml
+++ b/.github/workflows/pylint-code-check.yml
@@ -52,21 +52,21 @@ jobs:
           echo -e "![pylint](https://img.shields.io/badge/pylint-$PYLINT_SCORE-$COLOR)\n$(cat README.md)" > README.md.tmp
           mv README.md.tmp README.md
 
-      # - name: Commit and Push README update 
-      #   run: |
-      #     git config --global user.name "github-actions[bot]"
-      #     git config --global user.email "github-actions[bot]@users.noreply.github.com"
-      #     git add README.md pylint_report.txt
-      #     git commit -m "Update Pylint badge in README [skip ci]" || echo "No changes to commit"
-      #     git push
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GHA_TOKEN }}
-
-      - name: Commit and Push README update
+      - name: Commit and Push README update 
         run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@users.noreply.github.com"
-          git remote set-url origin https://x-access-token:${{ secrets.GHA_TOKEN }}@github.com/${{ github.repository }}
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add README.md pylint_report.txt
           git commit -m "Update Pylint badge in README [skip ci]" || echo "No changes to commit"
-          git push origin HEAD:${{ github.ref_name }}
+          git push
+        # env:
+        #   GITHUB_TOKEN: ${{ secrets.GHA_TOKEN }}
+
+      # - name: Commit and Push README update
+      #   run: |
+      #     git config --global user.name "github-actions"
+      #     git config --global user.email "github-actions@users.noreply.github.com"
+      #     git remote set-url origin https://x-access-token:${{ secrets.GHA_TOKEN }}@github.com/${{ github.repository }}
+      #     git add README.md pylint_report.txt
+      #     git commit -m "Update Pylint badge in README [skip ci]" || echo "No changes to commit"
+      #     git push origin HEAD:${{ github.ref_name }}
